fixes checkbox width on mobile

--- a/boilerplate/src/sass/ui/_checkbox.scss
+++ b/boilerplate/src/sass/ui/_checkbox.scss
@@ -11,7 +11,7 @@
 
 .checkbox
 {
-  display:       inline-flex;
+  display: inline-flex;
     align-items: center;
 }
 .checkbox-input
@@ -24,35 +24,39 @@
   {
     &::after
     {
-      opacity:    1;
+      opacity: 1;
       visibility: visible;
     }
   }
 }
 .checkbox-ui
 {
-  background:    $color-white;
-  border:        1px solid $color-black;
-  display:       block;
-  height:        24px;
-  position:      relative;
-  transition:    all 0.3s ease;
-  width:         24px;
+  background: $color-white;
+  border: 1px solid $color-black;
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 0;
+  height: 24px;
+  width: 24px;
+
+  position: relative;
+  transition: all 0.3s ease;
 
   &::after
   {
     background: $color-black;
-    content:    "";
-    display:    block;
-    height:     70%;
-    opacity:    0;
-    position:   absolute;
-      left:     50%;
-      top:      50%;
-    transform:  translateX(-50%) translateY(-50%);
-    transition: all 0.3s ease;
+    content: "";
+    display: block;
+    height: 70%;
+    opacity: 0;
     visibility: hidden;
-    width:      70%;
+    width: 70%;
+
+    position: absolute;
+      left: 50%;
+      top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    transition: all 0.3s ease;
   }
 }
 .checkbox-label
